--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <!-- Chat messages will be displayed here -->
     </div>
     <div class="input-area">
-      <input type="text" id="userInput" placeholder="Type your message..." />
-      <button id="sendButton">Send</button>
+      <input type="text" id="userInput" placeholder="ここに文字を入力してください。" />
+      <button id="sendButton">送る</button>
     </div>
   </div>
   <script src="main.js"></script>
